--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language: go
-script: go test
+sudo: false
+go:
+  - 1.4
+  - 1.5
+  - tip
+install:
+  - go get -d -t ./...
+script:
+  - go test ./...
