--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: go
 sudo: false
 go:
-  - 1.4
-  - 1.5
+  - 1.7
   - tip
+ before_install:
+  - go get github.com/mattn/goveralls
 install:
   - go get -d -t ./...
 script:
   - go test ./...
+  - $HOME/gopath/bin/goveralls -service=travis-ci
